2010-09-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/convert.c (image2StandardPseudoColor): Small change
	to keep static code analyser happy.
	* Source/x11/XGServerEvent.m (process_key_event): Don't process
	the event if we don't have a key window.
	* Source/x11/XGServerWindow.m (_computeDepth): Test for unknown
	visual class.
	* Tools/gpbs.m: Rename newDataWithVersion: into dataWithVersion to
	follwo the Objective_c naming convention.

2010-09-10  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_activate.m: Revert the change to call
	 -[NSApp deactivate].. more investigation needed

2010-08-30  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Only show taskbar buttons for windows
	which satisfy both:

	- style mask isn't NSBorderlessWindowMask
	- style mask don't have NSUtilityWindowMask set

	Should fix bug 30911

2010-08-29  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_activate.m: Call -[NSApp deactivate] in response
	to a WM_ACTIVEAPPP message reporting that the app lost focus.

	This delivers NSApplicationWillResignActiveNotification
	and NSApplicationDidResignActiveNotification, hides panels, etc.

2010-08-24  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Handle Page Down and Page Up keys,
  as well as adding a few others.

2010-08-24  Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/win32/WIN32Server.h:
	* Source/win32/WIN32Server.m:
	* Source/win32/w32_movesize.m:
	Fix a rather serious error where the extra window data was allocated
	in two places (allocated with objc_malloc in the WM_CREATE handler,
	and also allocated by Windows using the cbWndExtra field of the window
	class structure). Sometimes the window level was accessed from one
	memory area and sometimes from the other.
	
	This is a quick fix that leaves the level and ordered properties
	in the cbWndExtra area, and the rest is left in the WIN_INTERN
	structure. 
